PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? 2009, PHP 5.2.9
- Added optional sorting type flag parameter to array_unique(). Default is
  SORT_REGULAR. (Andrei)

- Fixed zip filename property read. (Pierre)
- Fixed explode() behavior with empty string to respect negative limit. (Shire)
- Fixed security issue in imagerotate(), background colour isn't validated
  correctly with a non truecolour image, reported by Hamid Ebadi, APA Laboratory.
  (Fixes CVE-2008-5498) (Scott)
- Fixed a segfault when malformed string is passed to json_decode(). (Scott)

- Fixed bug #47027 (var_export doesn't show numeric indices on ArrayObject).
  (Derick)
- Fixed bug #46985 (OVERWRITE and binary mode does not work, regression introduced in
  5.2.8). (Pierre)
- Fixed bug #46973 (IPv6 address filter rejects valid address). (Felipe)
- Fixed bug #46964 (Fixed pdo_mysql build with older version of MySQL). (Ilia)
- Fixed bug #46959 (Unable to disable PCRE). (Scott)
- Fixed bug #46918 (imap_rfc822_parse_adrlist host part not filled in correctly).
  (Felipe)
- Fixed bug #46917 (Socket handling completely broken). (Jost boekemeier, Felipe).
- Fixed bug #46889 (Memory leak in strtotime()). (Derick)
- Fixed bug #46887 (Invalid calls to php_error_docref()).
  (oeriksson at mandriva dot com, Ilia)
- Fixed bug #46873 (extract($foo) crashes if $foo['foo'] exists). (Arnaud)
- Fixed bug #46798 (Crash in mssql extension when retrieving a NULL value
  inside a binary or image column type). (Ilia)
- Fixed bug #46782 (fastcgi.c parse error). (Matt)
- Fixed bug #46760 (SoapClient doRequest fails when proxy is used). (Felipe)
- Fixed bug #46748 (Segfault when an SSL error has more than one error). (Scott)
- Fixed bug #46739 (array returned by curl_getinfo should contain content_type key). 
  (Mikko)
- Fixed bug #46701 (Creating associative array with long values in the key fails